[#14412] Fix flaky test AsyncBackupTest
Signed-off-by: Pedro Ruivo <pruivo@redhat.com>